--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^11.0.3"
+    "electron": "^11.0.3",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
